# S.L.I.C.E-

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.MD
src/: main.py
src/infrastructure/: logging.py  settings.py
src/modules/administration/models/: __init__.py  guild_config_model.py  users_model.py
src/modules/administration/repositories/: guild_config_repository.py  user_repository.py
src/modules/automation/cogs/: holder_verification_cog.py  sales_config_cog.py  scheduled_webhook_cog.py
src/modules/automation/controllers/: holder_verification_controller.py  sales_controller.py  scheduled_webhook_controller.py
src/modules/automation/models/: __init__.py  holder_role_threshold_model.py  holder_user_role_model.py  holder_verification_config_model.py  holder_verification_model.py  sales_entity.py  sales_nft_config_model.py  scheduled_webhook_model.py
src/modules/automation/repositories/: holder_user_role_repository.py  holder_verification_config_repository.py  holder_verification_repository.py  sales_config_repository.py  scheduled_webhook_repository.py
src/modules/automation/services/: holder_verification_service.py  sales_notification_service.py  sales_service.py
src/modules/automation/usecases/: holder_fetch_all_usecase.py  holder_verification_usecase.py  sales_fetch_usecase.py  sales_send_usecase.py  scheduled_webhook_usecase.py
src/shared/services/: discord_service.py  http_client.py  imgbb_service.py  reservoir_service.py  walletsignature_service.py
(+63 files in other folders)
